--- a/frontend/src/routes/FinanceDashboard/FinanceDashboard.module.css
+++ b/frontend/src/routes/FinanceDashboard/FinanceDashboard.module.css
@@ -5,7 +5,6 @@
 }
 .pg-content {
   display: flex;
-  flex: 1;
   flex-direction: row;
-  min-width: 0;
+  height: 100%;
 }
